tests/compile-fail/integration_suite__integration__general__local_in_std.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: feature not supported by format
   ┌─ <input>:21:13
   │
21 │         int x = 4;
   │             ^^^^^ update assignment with this operation not supported in this game


